log
Wed 08 May 2024 01:22:49 AM UTC: 
 treemap.c | 62 +++++++++++++++++++++++++-------------------------------------
 1 file changed, 25 insertions(+), 37 deletions(-)
 tests:  4|7
total_score: 5/70
832777d
Wed 08 May 2024 01:38:18 AM UTC: 
 treemap.c | 33 ++++++++++++++++++++++++++++++++-
 1 file changed, 32 insertions(+), 1 deletion(-)
 tests:  4|7
total_score: 5/70
45b6ff5
Wed 08 May 2024 01:39:52 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|7
total_score: 5/70
9e2e877
Wed 08 May 2024 01:44:26 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|7
total_score: 5/70
85fd8f4
Wed 08 May 2024 01:50:40 AM UTC: 
 treemap.c | 21 +++++++++++----------
 1 file changed, 11 insertions(+), 10 deletions(-)
 tests:  4|7
total_score: 5/70
77f62fa
Wed 08 May 2024 01:58:00 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|6
total_score: 15/70
c501b63
Wed 08 May 2024 01:58:27 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|6
total_score: 15/70
ebfe9ce
Wed 08 May 2024 01:58:41 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|7
total_score: 5/70
d08fb66
Wed 08 May 2024 01:59:12 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|7
total_score: 5/70
cfb702b
Wed 08 May 2024 01:59:20 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|6
total_score: 15/70
a871c35
Wed 08 May 2024 02:00:29 AM UTC: 
 treemap.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  8|5
total_score: 15/70
3a90dcb
Wed 08 May 2024 02:09:31 AM UTC: 
 treemap.c | 45 ++++++++++++++++++++++++++++++++++++++++++++-
 1 file changed, 44 insertions(+), 1 deletion(-)
 tests:  8|5
total_score: 15/70
abef358
Wed 08 May 2024 02:10:31 AM UTC: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  8|5
total_score: 15/70
d795552
Wed 08 May 2024 02:12:23 AM UTC: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  8|5
total_score: 15/70
945fe45
Wed 08 May 2024 02:13:41 AM UTC: 
 treemap.c | 37 +++++++++++++------------------------
 1 file changed, 13 insertions(+), 24 deletions(-)
 tests:  8|5
total_score: 15/70
a8410b6
Wed 08 May 2024 02:15:39 AM UTC: 
 treemap.c | 58 +++++++++++++++++++++++++++++++++++++++++-----------------
 1 file changed, 41 insertions(+), 17 deletions(-)
 tests:  8|5
total_score: 15/70
89bdf66
Wed 08 May 2024 02:16:55 AM UTC: 
 treemap.c | 71 +++++++++++++++++++++++++++++++++------------------------------
 1 file changed, 37 insertions(+), 34 deletions(-)
 tests:  8|5
total_score: 15/70
35f4bb9
Wed 08 May 2024 02:17:27 AM UTC: 
 treemap.c | 80 ++++++++++++++++++++++++++++++++++++++-------------------------
 1 file changed, 49 insertions(+), 31 deletions(-)
 tests:  8|5
total_score: 15/70
1d242f4
Wed 08 May 2024 02:19:48 AM UTC: 
 treemap.c | 98 ++++++++++++++++++++++++++++++---------------------------------
 1 file changed, 46 insertions(+), 52 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘removeNode’:
treemap.c:110:33: error: ‘TreeNode’ has no member named ‘key’
  110 |       while(temp != NULL && temp->key != key) {
      |                                 ^~
treemap.c:110:42: error: ‘key’ undeclared (first use in this function); did you mean ‘key_t’?
  110 |       while(temp != NULL && temp->key != key) {
      |                                          ^~~
      |                                          key_t
treemap.c:110:42: note: each undeclared identifier is reported only once for each function it appears in
treemap.c:112:24: error: ‘TreeNode’ has no member named ‘key’
  112 |           if(key < temp->key)
      |                        ^~
treemap.c:156:34: error: ‘TreeNode’ has no member named ‘key’
  156 |           int succKey = successor->key;
      |                                  ^~
treemap.c:157:37: error: ‘TreeNode’ has no member named ‘data’
  157 |           void* succData = successor->data;
      |                                     ^~
treemap.c:158:28: error: passing argument 2 of ‘removeNode’ makes pointer from integer without a cast [-Werror=int-conversion]
  158 |           removeNode(tree, succKey);  // Eliminamos el sucesor
      |                            ^~~~~~~
      |                            |
      |                            int
treemap.c:105:42: note: expected ‘TreeNode *’ but argument is of type ‘int’
  105 | void removeNode(TreeMap *tree, TreeNode *node) {
      |                                ~~~~~~~~~~^~~~
treemap.c:159:15: error: ‘TreeNode’ has no member named ‘key’
  159 |           temp->key = succKey;
      |               ^~
treemap.c:160:15: error: ‘TreeNode’ has no member named ‘data’
  160 |           temp->data = succData;
      |               ^~
cc1: all warnings being treated as errors
Compilation failed
328febd
Wed 08 May 2024 02:21:15 AM UTC: 
 treemap.c | 90 ++++++++++++++++-----------------------------------------------
 1 file changed, 23 insertions(+), 67 deletions(-)
 tests:  8|5
total_score: 15/70
c657d22
Wed 08 May 2024 02:24:57 AM UTC: 
 treemap.c | 19 ++++++++++++++++++-
 1 file changed, 18 insertions(+), 1 deletion(-)
 tests:  17|4
total_score: 35/70
6aeac76
Wed 08 May 2024 02:27:33 AM UTC: 
 treemap.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  17|4
total_score: 35/70
632c97d
Wed 08 May 2024 02:29:08 AM UTC: 
 treemap.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  19|3
total_score: 40/70
432b492
Sat 11 May 2024 09:30:44 PM UTC: 
 treemap.c | 22 +++++++++++++++++++++-
 1 file changed, 21 insertions(+), 1 deletion(-)
In file included from test.c:4:
treemap.c:175:1: error: expected identifier or ‘(’ before ‘}’ token
  175 | }
      | ^
Compilation failed
abbeba8
Sat 11 May 2024 09:30:56 PM UTC: 
 treemap.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  0|0
a44a35e
Sat 11 May 2024 09:35:46 PM UTC: 
 treemap.c | 30 ++++++++++++------------------
 1 file changed, 12 insertions(+), 18 deletions(-)
 tests:  21|3
total_score: 40/70
703ef8d
Sat 11 May 2024 09:41:45 PM UTC: 
 treemap.c | 7 +++++++
 1 file changed, 7 insertions(+)
 tests:  0|0
545d304
Sat 11 May 2024 09:42:36 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  20|3
total_score: 40/70
e4c348d
Sat 11 May 2024 09:42:56 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
ac4b0f0
